# QMVision

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  QMVision.cpp  README.md  reset_all.bat  vcpkg_cribnotes.txt  vsg_cmake_changes.txt
cmake/: clone_vendors.py  fix_if_blocks.py  patch_output_to_bin.py  patch_vsg_find_glslang.py  patch_vsg_macros.py  strip_cmake_installs.py
src/: GLCanvas.cpp  GLCanvas.h  MainFrame.cpp  MainFrame.h  main.cpp
src/gl/: GpuMesh.h  Math.h  PSLGOverlay.cpp  PSLGOverlay.h  Picker.h  Shader.h
